# service-spark-iasworld

./: .dockerignore  .env  .env.dev  .env.prod  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
.github/workflows/: build-docker.yaml  lint.yaml
config/: default_jobs.yaml  default_predicates.csv  default_predicates.sql  default_settings.yaml  spark-defaults.conf  table_definitions.yaml
config/default_jobs/: test_jobs.yaml  weekday_jobs.yaml  weekend_jobs.yaml  weekend_jobs_test.yaml
scripts/: collapse.py  get-jwt.py  spark-test.py  temp.sh
secrets/: GH_PEM  IPTS_CONNECTION  SPARK_ENV
spark/: spark_app.py  submit.py  temp.sh
spark/spark/: app.py  job.py  session.py  utils.py
src/: default_jobs.yaml  submit.py  submit.sh  submit_helper.sh  submit_jobs.py  temp.sh  test_job.json
src/utils/: aws.py  github.py  helpers.py  spark.py
