[project]
name = "service-spark-iasworld"
version = "0.0.1"
description = """
Service for extracting tables from the CCAO system-of-record and
uploading them to the Data Department's data warehouse
"""
keywords = ["spark", "data engineering", "local government"]
authors = [
  {name = "Dan Snow", email = "daniel.snow@cookcountyil.gov"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "boto3~=1.42.11",
  "joblib~=1.5.3",
  "jwt~=1.4.0",
  "py4j~=0.10.9.9",
  "pyarrow~=22.0.0",
  "pyyaml~=6.0.3",
  "requests~=2.32.5"
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["I"]
